Agregue un acento porque no es una comparacion

--- a/01-basics.html
+++ b/01-basics.html
@@ -39,7 +39,7 @@
 </ul>
 </div>
 </section>
-<p>Comenzaremos explorando como podemos utilizar el control de versiones para mantener un registro de que cambios hizo una sola persona, así como del cuando se realizaron estos cambios. Estos cambios pueden ser en un escrito o en una pieza de código. Incluso si no realizas trabajos en colaboración con otros personas, usar un sistema de control de versiones es mucho mejor que terminar en una situación como esta:</p>
+<p>Comenzaremos explorando cómo podemos utilizar el control de versiones para mantener un registro de que cambios hizo una sola persona, así como del cuando se realizaron estos cambios. Estos cambios pueden ser en un escrito o en una pieza de código. Incluso si no realizas trabajos en colaboración con otros personas, usar un sistema de control de versiones es mucho mejor que terminar en una situación como esta:</p>
 <p><a href="http://www.phdcomics.com"><img src="fig/phd101212s.gif" alt="Piled Higher and Deeper by Jorge Cham, http://www.phdcomics.com" /></a></p>
 <p>“Piled Higher and Deeper” by Jorge Cham, http://www.phdcomics.com</p>
 <p>Todos hemos estado en una situación similar: parece ridículo tener multiples versiones prácticamente idénticas del mismo documento. Algunos procesadores de texto nos ayudan a lidiar con estas situaciones, como por exemplo la función “Resaltar Cambios” (Track Changes) de Microsoft Word o el historial de versiones de Google Docs.</p>
