Changed logo and colors

--- a/13-hosting.html
+++ b/13-hosting.html
@@ -19,8 +19,8 @@
   <body class="lesson">
     <div class="container card">
       <div class="banner">
-        <a href="http://www.puntoyaprende.com/pbi/" title="Posgrado en Biologia Integrativa">
-          <img alt="Logo Posgrado Biologia Integrativa" src="img/posgrado_bi_logo.png" />
+        <a href="http://paginas.matem.unam.mx/bioinformatica/index.php" title="Escuela de Verano de Bioinformatica">
+          <img alt="Logo Escuela de Verano de Bioinformatica 2016" src="img/logo-bioinformatica2.png" />
         </a>
       </div>
       <article>
@@ -34,7 +34,7 @@
 </div>
 <div class="panel-body">
 <ul>
-<li>Explain different options for hosting scientific work.</li>
+<li>Explicar distintas opciones para albergar trabajo científico.</li>
 </ul>
 </div>
 </section>
