--- a/LICENSE.html
+++ b/LICENSE.html
@@ -19,8 +19,8 @@
   <body class="lesson">
     <div class="container card">
       <div class="banner">
-        <a href="http://www.puntoyaprende.com/pbi/" title="Posgrado en Biologia Integrativa">
-          <img alt="Logo Posgrado Biologia Integrativa" src="img/posgrado_bi_logo.png" />
+        <a href="http://paginas.matem.unam.mx/bioinformatica/index.php" title="Escuela de Verano de Bioinformatica">
+          <img alt="Logo Escuela de Verano de Bioinformatica 2016" src="img/logo-bioinformatica2.png" />
         </a>
       </div>
       <article>
@@ -57,9 +57,9 @@
       </div>
       </article>
       <div class="footer">
-                    <h4 class="title">Curso basado en material generado por:</h4>
+        <h5 class="title">Curso basado en material generado por:</h5>
         <a href="http://software-carpentry.org" title="Software Carpentry">
-          <img alt="Software Carpentry banner" src="img/software-carpentry-banner.png" style="width: 120px" />
+        <img alt="Software Carpentry banner" src="img/software-carpentry-banner.png" style="width: 120px" />
         <a class="label swc-blue-bg" href="https://github.com/swcarpentry/git-novice">Fuente Original</a>
         <a class="label swc-blue-bg" href="mailto:selene.fernandez.valverde@gmail.com">Contacto</a>
         <a class="label swc-blue-bg" href="LICENSE.html">Licencia</a>
@@ -68,5 +68,6 @@
     <!-- Javascript placed at the end of the document so the pages load faster -->
     <script src="http://software-carpentry.org/v5/js/jquery-1.9.1.min.js"></script>
     <script src="css/bootstrap/bootstrap-js/bootstrap.js"></script>
+    <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
   </body>
 </html>
