--- a/01-basics.html
+++ b/01-basics.html
@@ -19,8 +19,8 @@
   <body class="lesson">
     <div class="container card">
       <div class="banner">
-        <a href="http://www.puntoyaprende.com/pbi/" title="Posgrado en Biologia Integrativa">
-          <img alt="Logo Posgrado Biologia Integrativa" src="img/posgrado_bi_logo.png" />
+        <a href="http://paginas.matem.unam.mx/bioinformatica/index.php" title="Escuela de Verano de Bioinformatica">
+          <img alt="Logo Escuela de Verano de Bioinformatica 2016" src="img/logo-bioinformatica2.png" />
         </a>
       </div>
       <article>
@@ -39,10 +39,10 @@
 </ul>
 </div>
 </section>
-<p>Comenzaremos explorando cómo podemos utilizar el control de versiones para mantener un registro de que cambios hizo una sola persona, así como del cuando se realizaron estos cambios. Estos cambios pueden ser en un escrito o en una pieza de código. Incluso si no realizas trabajos en colaboración con otros personas, usar un sistema de control de versiones es mucho mejor que terminar en una situación como esta:</p>
+<p>Comenzaremos explorando como podemos utilizar el control de versiones para mantener un registro de qué cambios hizo una sola persona, así como de cuándo se realizaron estos cambios. Dichos cambios pueden ser en un escrito o en una pieza de código. Incluso si no realizas trabajos en colaboración con otros personas, usar un sistema de control de versiones es mucho mejor que terminar en una situación como esta:</p>
 <p><a href="http://www.phdcomics.com"><img src="fig/phd101212s.gif" alt="Piled Higher and Deeper by Jorge Cham, http://www.phdcomics.com" /></a></p>
 <p>“Piled Higher and Deeper” by Jorge Cham, http://www.phdcomics.com</p>
-<p>Todos hemos estado en una situación similar: parece ridículo tener multiples versiones prácticamente idénticas del mismo documento. Algunos procesadores de texto nos ayudan a lidiar con estas situaciones, como por exemplo la función “Resaltar Cambios” (Track Changes) de Microsoft Word o el historial de versiones de Google Docs.</p>
+<p>Todos hemos estado en una situación similar: parece ridículo tener múltiples versiones prácticamente idénticas del mismo documento. Algunos procesadores de texto nos ayudan a lidiar con estas situaciones, como por exemplo la función “Resaltar Cambios” (Track Changes) de Microsoft Word o el historial de versiones de Google Docs.</p>
 <p>Los sistemas de control de versiones comienzan con una version base del documento y después guardan los cambios hechos en cada paso. Podemos pensar en estos sistemas como si fuesen una película: si la regresamos al inicio y comenzamos con el documento base podemos reproducir cada cambio y terminar con la versión final del documento.</p>
 <div class="figure">
 <img src="fig/play-changes.svg" alt="Los cambios se guardan de manera secuencial" />
@@ -64,7 +64,7 @@
 <h2 id="la-larga-historia-de-los-sistemas-de-control-de-versiones"><span class="glyphicon glyphicon-pushpin"></span>La larga historia de los sistemas de control de versiones</h2>
 </div>
 <div class="panel-body">
-<p>Los sistemas automatizados de control de versiones no son nada nuevo. Herramientas como RCS, CVS o Subversion existen desde el principio de los años 80s y son utilizadas por varias compañias grandes. Sin embargo, varios de estos se empiezan a considerar sistemas heredados debido a las diversas limitaciones en sus capacidades. A los sistemas más modernos como Git y <a href="http://swcarpentry.github.io/hg-novice/">Mercurial</a> se les conoce como <em>distribuidos</em>, ya que no cuentan con un servidor centralizado que almacena el repositorio. Estos sistemas modernos también incluyen poderosas herramientas e unión o “merging” que permiten que multiples contribuidores trabajen en los mismos archivos de manera simultanea.</p>
+<p>Los sistemas automatizados de control de versiones no son nada nuevo. Herramientas como RCS, CVS o Subversion existen desde el principio de los años 80s y son utilizadas por varias compañias grandes. Sin embargo, varios de estos se empiezan a considerar sistemas heredados debido a las diversas limitaciones en sus capacidades. A los sistemas más modernos como Git y <a href="http://swcarpentry.github.io/hg-novice/">Mercurial</a> se les conoce como <em>distribuidos</em>, ya que no cuentan con un servidor centralizado que almacena el repositorio. Estos sistemas modernos también incluyen poderosas herramientas de unión o “merging” que permiten que multiples contribuidores trabajen en los mismos archivos de manera simultánea.</p>
 </div>
 </aside>
         </div>
